<resources>
    <string name="app_name">Movie App</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_notification">Notificações</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="title_activity_main_drawer2">MainDrawerActivity2</string>

    <string name="popular">Popular</string>
    <string name="most_popular_movies">Most popular movies</string>
    <string name="menu_preferences_title">Preferências</string>
    <string name="menu_home_title">Página Principal</string>
    <string name="menu_signout_title">Deslogar</string>
    <string name="menu_signout">Sair</string>
    <string name="bottom_nav_search">Pesquisa</string>
    <string name="bottom_nav_home">Página Inicial</string>
    <string name="bottom_nav_favorites">Favoritos</string>
    <string name="configura_es">Configurações</string>
    <string name="modo_escuro">Modo escuro</string>
    <string name="description">Description</string>
    <string name="movie_title">Title</string>
    <string name="type_to_search_for_a_movie">Pesquisar filme</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Senha</string>
    <string name="meus_favoritos">Meus Favoritos</string>
    <string name="nome_do_filme">Nome do Filme</string>
    <string name="enter_button">Entrar</string>
    <string name="signup_button">Cadastrar</string>
    <string name="hint_choose_email">Escolha o e-mail</string>
    <string name="button_search_movies">Filtrar filmes</string>
    <string name="button_edit_emails">Apagar e-mail</string>
    <string name="text_offline_title">Busque seus filmes favoritos oflline</string>
    <string name="dialog_choose_email_to_delete">Escolha o e-mail que você deseja deletar</string>
    <string name="email">Email</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="register"><u>CADASTRAR</u></string>
    <string name="cancel">Cancelar</string>
    <string name="password">Senha</string>
    <string name="login"><u>ENTRAR</u></string>
    <string name="create_register">CRIAR CADASTRO</string>
    <string name="not_register_yet">Ainda não tem uma conta?</string>
    <string name="g_nero">Gênero</string>
    <string name="welcome_message">Colecione seus filmes favoritos</string>
    <string name="ver_mais">Ver mais</string>
    <string name="textview_do_your_search">Pesquise filmes pelo título</string>
    <string name="keep_session">Salvar sessão ao sair</string>
    <string name="register_button">Cadastrar</string>

</resources>