<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.OfflineFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewTitleOffline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_offline_title"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        app:boxStrokeWidth="1dp"
        app:boxStrokeColor="@color/disableItemBottomNav"
        app:hintTextColor="@color/disableItemBottomNav"
        app:boxStrokeWidthFocused="1dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_lupa_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleOffline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEditText"
            android:textCursorDrawable="@null"
            android:textColor="@color/disableItemBottomNav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:hint="@string/type_to_search_for_a_movie" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchTextLayout" />
    <ImageView
        android:id="@+id/imageViewDoYourSearch"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="24dp"
        android:visibility="invisible"
        android:src="@drawable/ic_lupa_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDoYourSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDoYourSearch"
        android:text="@string/textview_do_your_search"
        tools:text="Pesquise seus filmes pelo título" />

</androidx.constraintlayout.widget.ConstraintLayout>